<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".LoginActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="327dp"
            android:layout_weight="3"
            android:background="@color/purple_500">

            <!--            账号、密码输入-->
            <RelativeLayout
                android:id="@+id/edit_layout_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_background"
                android:gravity="center"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="-57dp">

                <!--        密码-->

                <EditText
                    android:id="@+id/edittext_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="236dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/round_editstyle"
                    android:hint="@string/text_hint_username"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edittext_account"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="43dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/round_editstyle"
                    android:hint="@string/text_hint_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/password_visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/edittext_password"
                    android:layout_alignEnd="@id/edittext_password"
                    android:layout_alignBottom="@id/edittext_password"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginBottom="0dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_outline_visibility_off_24" />

                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="35dp"
                    android:gravity="center"
                    android:text="易图"
                    android:textColor="@color/white"
                    android:textSize="96dp"
                    android:typeface="serif" />

            </RelativeLayout>

            <!--        登陆按钮-->
            <!--        button_login-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <CheckBox
                android:id="@+id/save_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:buttonTint="@color/purple_500"
                android:shadowColor="@color/purple_500"
                android:text="记住密码"
                android:textColorHighlight="@color/purple_500"
                android:textColorLink="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_login"
                app:layout_constraintHorizontal_bias="0.662"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.094" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_login_to_setting"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shezhi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>